--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,34 @@
-# Server Configuration
-NODE_ENV=development
+# ===========================================
+# UCSM FRWC 2026 Backend - Environment Config
+# ===========================================
+# Copy this file to .env and update the values
+
+# Application
+NODE_ENV=production
 PORT=8000
 
-# Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ucsm_frwc?schema=public
+# Database (PostgreSQL)
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your-secure-db-password
+POSTGRES_DB=ucsm_frwc
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+# JWT Authentication
+JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-long
 JWT_EXPIRES_IN=7d
 
-# CORS Configuration
-FRONTEND_URL=http://localhost:5173
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:3000
 
-# Vercel Blob Storage (for image uploads)
+# MinIO Object Storage
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=your-secure-minio-password
+MINIO_ENDPOINT=minio
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=${MINIO_ROOT_USER}
+MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
+MINIO_BUCKET=uploads
+MINIO_USE_SSL=false
+
+# Optional: Vercel Blob (if using Vercel storage instead of MinIO)
 # BLOB_READ_WRITE_TOKEN=your-vercel-blob-token
